add new overnight features